--- a/vvget.Library/vvget.Library.csproj
+++ b/vvget.Library/vvget.Library.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Crawler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebElement.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
